--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5"
+        "laravel/telescope": "^4.8",
+        "laravel/tinker": "^2.5",
+        "tymon/jwt-auth": "^1.0.2"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
@@ -49,7 +51,9 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": []
+            "dont-discover": [
+                "laravel/telescope"
+            ]
         }
     },
     "config": {
